--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 anyio==3.7.0
+bcrypt==4.0.1
 cffi==1.15.1
 click==8.1.3
 cryptography==41.0.1
@@ -7,6 +8,7 @@ fastapi==0.97.0
 h11==0.14.0
 idna==3.4
 mysqlclient==2.1.1
+passlib==1.7.4
 pycparser==2.21
 pydantic==1.10.9
 pymodbus==3.3.2
