logging req/res body 부분 추가

--- a/logging_config.json
+++ b/logging_config.json
@@ -1,10 +1,10 @@
 {
     "logger" : {
         "path":"/Users/jiheechoi/Desktop/FastAPI_SQL/planner/log/access.log",
-        "level":"debug",
-        "rotation":"15:00", 
+        "level":"info",
+        "rotation":"3 days", 
         "retention":"10 days",
-        "format" : "<level>{level: <8}</level> <green>{time:YYYY-MM-DD HH:mm:ss.SSS}</green> request id: {extra[request_id]} - <cyan>{name}</cyan>:<cyan>{function}</cyan> - <level>{message}</level>"
+        "format" : "<level>{level: <8}</level> <green>{time:YYYY-MM-DD HH:mm:ss}</green> request id: {extra[request_id]} - <cyan>{name}</cyan>:<cyan>{function}</cyan> - <level>{message}</level>"
 
     }
   }
