--- a/logging_config.json
+++ b/logging_config.json
@@ -1,11 +1,10 @@
 {
     "logger" : {
-        "path":"/Users/jiheechoi/Desktop/FastAPI_SQL/planner/log/access.log",
+        "path":"/Users/jiheechoi/Desktop/FastAPI_SQL/planner/log/",
         "level":"info",
         "rotation":"3 days", 
         "retention":"10 days",
-        "format" : "<level>{level: <8}</level> <green>{time:YYYY-MM-DD HH:mm:ss}</green> request id: {extra[request_id]} - <cyan>{name}</cyan>:<cyan>{function}</cyan> - <level>{message}</level>"
-
+        "format" : "<level>{level: <8}</level> <green> {message} </green>\n {time:YYYY-MM-DD HH:mm:ss} request id: {extra[request_id]} - {name}: <cyan>{function}</cyan>   "
     }
   }
   
